--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
+
     staging:
-      +materialized: table
+      schema: stg
+      materialized: view
+    intermediate:
+      schema: int
+      materialized: view
+    mart:
+      schema: mrt
+      materialized: table
